--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.3.1",
+		"google-map-react": "^2.1.9",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
