--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"react-dom": "^16.8.4",
 		"react-dropdown-date": "^2.2.4",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"react-spring": "^8.0.27"
 	}
 }
